session middleware for tracking logins up and running

--- a/views/users/sign_up.jade
+++ b/views/users/sign_up.jade
@@ -5,13 +5,16 @@
 <label><b>Username</b></label>
 <input type="text" placeholder="Enter Username" name="username" required>
 
+<label><b>Email</b></label>
+<input type="text" placeholder="Enter Email Address" name="email" required>
+
 <label><b>Password</b></label>
 <input type="password" placeholder="Enter Password" name="password" required>
 
 <label><b>Password</b></label>
 <input type="password" placeholder="Confirm Password" name="passwordConf" required>
 
-<button type="submit">Login</button>
+<button type="submit">Sign Up</button>
 <label>
 <input type="checkbox" checked="checked"> Remember me
 </label>
