--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,1 +1,6 @@
-<h1>Nightlife</h1>
+doctype html
+html
+  head
+    link(link(rel='stylesheet', href='../public/stylesheets/bar_style.css'))
+  body
+    block content
